Remove Supabase key from index.html and update Vite config for security

--- a/index.html
+++ b/index.html
@@ -4,7 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Batts Hub</title>
+    <!-- Supabase Configuration comments only - actual values should NOT be in source control -->
+    <!-- For security reasons, we should not put actual API keys in the HTML source -->
+    <script>
+      /* 
+       * Proper deployment should inject these values via environment variables
+       * or use a secure runtime configuration system
+       */
+    </script>
   </head>
   <body>
     <div id="root"></div>
